@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/coreutils
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.305 2010/10/26 01:58:31 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/coreutils/ChangeLog,v 1.306 2010/11/13 23:33:52 vapier Exp $
+
+*coreutils-8.7 (13 Nov 2010)
+
+  13 Nov 2010; Mike Frysinger <vapier@gentoo.org> +coreutils-8.7.ebuild:
+  Version bump.
 
 *coreutils-8.6 (26 Oct 2010)
 
